# Schmetterling

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  bootstrap.js  docker-compose.yml  index.html  package.json  webpack.config.js
back/: Cargo.toml
back/src/: main.rs  markup.rs
common/: Cargo.toml
common/src/: id.rs  markup.rs
front/: .gitignore  Cargo.toml  index.html  package.json
front/font-awesome/scss/: _shims.scss
front/src/: action.rs  data.rs  id.rs  index.scss  main.rs  markup.rs
front/src/components/: card.rs  doc.rs  edt.rs  mod.rs  modal.rs  proj.rs  sec.rs  text.rs
front/src/pages/: dash.rs
schling-common/: Cargo.toml
schling-common/src/: id.rs  invoke.rs  key.rs  lib.rs  markup.rs  source.rs
schling-front/: ABOUT.md  Cargo.toml  index.html  package.json
schling-front/css/: style.min.css
schling-front/font-awesome/scss/: solid.scss
schling-front/src/: data.rs  index.scss  main.rs
schling-front/src/components/: code_area.rs  mod.rs  sec.rs  sec_list.rs  text.rs  textarea.js
schling-front/src/pages/: home.rs  imprint.rs  mod.rs  not_found.rs
schling-writings/: Cargo.toml  Dockerfile
src/: app.rs  lib.rs  main.rs  main.scss  markup.rs
src/components/: edt.rs  mod.rs
src/routes/: mod.rs
static/: index.html
