[package]
name = "Schmetterling"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
comrak = "^0.12"
log = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
strum = "^0.23"
strum_macros = "^0.23"
wasm-bindgen = "^0.2"
wasm-logger = "^0.2"
web-sys = {version = "^0.3", features = ["KeyboardEvent"]}
yew = "^0.19"
yew-router = "^0.16"
gloo-storage = "^0.2"

[dev-dependencies]
wasm-bindgen-test = "^0.3"
