[package]
name = "Schmetterling"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = "^0.12"
console_error_panic_hook = "^0.1"
gloo-storage = "^0.2"
log = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
strum = "^0.23"
strum_macros = "^0.23"
wasm-bindgen = "^0.2"
wasm-logger = "^0.2"
web-sys = {version = "^0.3", features = ["KeyboardEvent"]}
wee_alloc = "^0.4"
yew = "^0.19"
yew-router = "^0.16"

[dev-dependencies]
wasm-bindgen-test = "^0.3"