[package]
name = "Schmetterling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wee_alloc = {version="0.4", optional = true}
ybc = "0.2"
yew = "0.19"
yew-router = "0.16"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9"
web-sys = {version = "0.3" }