[package]
name = "schmetterling-back"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", features = ["compat"] }
futures-macro = "0.3"
juniper = "0.15"
nom = "7.1"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"