[package]
name = "schmetterling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4", features = ["wasmbind"]}
console_error_panic_hook = "0.1"
log = "0.4"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
multimap = "0.8"
wasm-bindgen = "0.2"
web-sys = {version = "0.3" }
wee_alloc = {version="0.4", optional = true}
ybc = "0.2"
yew = "0.19"
yew-agent = "0.1"
yew-router = "0.16"