[package]
name = "schling-front"
version = "0.0.1"
edition = "2021"

[dependencies]
closure = "0.3.0"
console_error_panic_hook = "0.1"
gloo-storage = "0.2"
gloo-console = "0.2"
schling-common = { path = "../schling-common", features = ["yew-wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "DomTokenList",
  "HtmlAnchorElement",
  "HtmlDivElement",
  "HtmlElement",
] }
wee_alloc = { version = "0.4", optional = true }
yew = "0.19"
yew-agent = "0.1"
yew-router = "0.16"
